--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,27 +1,20 @@
 name: Deploy Vite site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]  # Change to your default branch if necessary
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: ["main"]  # Change to your default branch if necessary
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -36,7 +29,7 @@ jobs:
       - name: Install Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
-          echo "::add-path::$(bun bin)"
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
         run: bun install
@@ -53,7 +46,6 @@ jobs:
         with:
           path: ./dist  # Vite outputs to the 'dist' directory by default
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
